tools/tests/ui/fail/l1067.cnf
// Test file for error code: L1067
// Expected error: Overflow Syntax character in expression -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
